--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>protfolio</title>
+    <!-- favicon -->
+    <link rel="icon" href="images/favicon.png" type="icon">
     <!-- remix icon -->
     <link rel="stylesheet" href="remix/remixicon.css" type="text/css">
     <!-- awesome font -->
